~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 8.2 version:

* %postgresql_tests_* macros now use random port for the test PostgreSQL
  server.  This helps in Koji build system where multiple builds of the
  same package can happen concurrently on one host and using the same
  port would make random build failures.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 8.1 version:

* Split testing RPM macros into two files;  one is related to build-time
  _testing_ against postgresql server, second is related to building against
  postgresql server (building server modules).

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 8.0 version:

* PostgreSQL on systems with systemd are now configured with
  --with-systemd, which simplifies the start/stop handling (we can
  stop shipping postgresql-ctl wrapper, e.g.).

* systemd service doesn't have the artificial timeout for PostgreSQL
  server start/stop (was 10 minutes before).

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 7.0 version:

* RPM macros file works with SCLs, too.

* New convenience RPM macro %postgresql_module_requires.

* Simplified build against SCLs with --with-scl option.

* New test macro %postgresql_tests_run.

Incompatible changes in 7.0 version

* The %pgtest_init && %pgtest_start renamed to %postgresql_tests_init and
  %postgresql_tests_start.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes in 6.0 version

* Dropped dependency on /bin/find utility.

* The postgresql-setup doesn't need root permissions.  It is better to not
  run this script as 'root' user from now.

Incompatible changes in 6.0 version

* The postgresql-setup doesn't support --new-systemd-unit option.  Please use
  postgresql-new-systemd-unit script instead (as 'root').

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
